maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: value unary_! is not a member of Unit
      while(!estSurBiscuit()||(!regardeLeNord())){
                               ^Escaper:63: warning: enclosing method regardeLeNord has result type Unit: return value discarded
  return dir==Direction.NORTH
  ^